feat: creating use-cases and factory
